idf_component_register(
    SRCS
        "main.c"
        "Wireless/Wireless.c"
        "vl53l1x.c"
    PRIV_REQUIRES
        esp_http_server
        esp_driver_gpio
        esp_driver_i2c
        esp_event
        esp_wifi
        json
        nvs_flash
        vl53l1x
    INCLUDE_DIRS
        "." 
        "./Wireless"
)